# AI-Ad-Agent

./: .gitignore  Dockerfile  PIPELINE_CHECK_REPORT.md  README.md  REPOSITORY_AUDIT.md  ZERO_DOWNLOAD_VIDEO_MERGING.md  analyze_veo_error.py  check_cloud_run_logs.py  check_job.py  check_logs_for_job.py  cloudbuild.yaml  create_fresh_ad_job.py  create_request_body.py  examine_job_files.py  fetch_logs_direct.py  fix_veo_permissions.sh  kill_all_servers.py  kill_current_server.py  list_bucket_structure.py  monitor_job_live.py  parse_job_logs.py  start_new_job.py  test_cloud_run_ad.py  test_dynamic_prompts.py  test_service_account_veo.py  test_stream_ad.py  test_stream_status.py
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  startup.sh
backend/app/: __init__.py  auth.py  config.py  secrets.py
backend/app/ad_agent/: __init__.py
backend/app/ad_agent/agents/: __init__.py  (+6 more)
backend/app/database/: __init__.py  firestore_db.py  gcs_storage.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  enums.py  schemas.py
backend/app/routes/: __init__.py  ad_agent.py  assets.py  auth.py  billing.py  campaigns.py  generate.py  history.py
backend/app/services/: __init__.py  unified_api_client.py  veo_client.py
backend/app/utils/: __init__.py  helpers.py  image_utils.py  job_poller.py  secrets_manager.py
backend/data/: .gitkeep
backend/scripts/: README.md  __init__.py  fetch_models.py  verify_gcp_setup.py
backend/tests/: __init__.py  test_api.py
(+43 files in other folders)
